# libmapvise

./: CMakeLists.txt  COPYING  README.md
libmapvise/: CMakeLists.txt  libmapvise.h
test/: CMakeLists.txt  test_anon.c  test_file.c
